--- a/Config-m.ini
+++ b/Config-m.ini
@@ -1,8 +1,8 @@
 [Section]
-MailID=0
 DestinationFolder=C:\FreeLance
 BackupTime=20:00:00
-LogEnable=False
+MailID=
 DeleteMails=0
-AutoSilent=False
+LogEnable=False
 Outlook_Folder_Include_List=Inbox,Sent Items,Deleted Items,Drafts,Junk Email
+AutoSilent=False
