--- a/Config.ini
+++ b/Config.ini
@@ -1,8 +1,10 @@
 [Section]
-MailID=0
-DestinationFolder=C:\FreeLance
+MailID=
+DestinationFolder=
 BackupTime=20:00:00
 LogEnable=False
-DeleteMails=0
 AutoSilent=False
-Outlook_Folder_Include_List=Inbox,Sent Items,Deleted Items,Drafts,Junk Email
+Include_List=Inbox
+Sent Items
+Deleted Items
+Drafts
