--- a/Config.ini
+++ b/Config.ini
@@ -1,10 +1,8 @@
 [Section]
-MailID=
-DestinationFolder=
+MailID=prash.roy@live.com
+DestinationFolder=C:\FreeLance
 BackupTime=20:00:00
-LogEnable=False
+LogEnable=True
 AutoSilent=False
 Include_List=Inbox
-Sent Items
-Deleted Items
-Drafts
+DeleteMails=0
